# bcql_py

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  bnf.md  generate_llms_file.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  interrogate-badge.yml  links-html-scheduled.yml  links-md.yml  publish.yml  sync-to-hf.yml  tests.yml
0.3.0/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
0.3.0/api/exceptions/: index.html
0.3.0/api/models/: index.html
0.3.0/api/models/alignment/: index.html
0.3.0/api/models/base/: index.html
0.3.0/api/models/capture/: index.html
0.3.0/api/models/function/: index.html
0.3.0/api/models/lookaround/: index.html
0.3.0/api/models/relation/: index.html
0.3.0/api/models/sequence/: index.html
0.3.0/api/models/span/: index.html
0.3.0/api/models/token/: index.html
0.3.0/api/parser/lexer/: index.html
0.3.0/api/parser/parser/: index.html
0.3.0/api/parser/tokens/: index.html
0.3.0/api/top_level/: index.html
0.3.0/api/validation/: index.html
0.3.0/guides/: index.html
0.3.0/guides/ast-design/: index.html
0.3.0/guides/cheatsheet/: index.html
0.3.0/guides/llm-workflows/: index.html
0.3.0/guides/tagset-validation/: index.html
0.3.0/quickstart/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  llms.txt  objects.inv
0.3.1/api/exceptions/: index.html
0.3.1/api/models/: index.html
0.3.1/api/models/alignment/: index.html
0.3.1/api/models/base/: index.html
0.3.1/api/models/capture/: index.html
0.3.1/api/models/function/: index.html
0.3.1/api/models/lookaround/: index.html
0.3.1/api/models/relation/: index.html
0.3.1/api/models/sequence/: index.html
0.3.1/api/models/span/: index.html
0.3.1/api/models/token/: index.html
0.3.1/api/parser/lexer/: index.html
0.3.1/api/parser/parser/: index.html
0.3.1/api/parser/tokens/: index.html
0.3.1/api/top_level/: index.html
0.3.1/api/validation/: index.html
0.3.1/guides/: index.html
0.3.1/guides/ast-design/: index.html
0.3.1/guides/cheatsheet/: index.html
0.3.1/guides/llm-workflows/: index.html
0.3.1/guides/tagset-validation/: index.html
0.3.1/quickstart/: index.html
0.3.1/search/: search_index.json
api/exceptions/: index.html
api/models/: index.html
api/models/alignment/: index.html
api/models/base/: index.html
api/models/capture/: index.html
api/models/function/: index.html
api/models/lookaround/: index.html
api/models/relation/: index.html
api/models/sequence/: index.html
api/models/span/: index.html
api/models/token/: index.html
api/parser/lexer/: index.html
api/parser/parser/: index.html
api/parser/tokens/: index.html
api/top_level/: index.html
app/: README.md  app.py  requirements.txt
docs/: hooks.py  index.md  quickstart.md
docs/api/: exceptions.md  top_level.md  validation.md
docs/api/models/: alignment.md  base.md  capture.md  function.md  index.md  lookaround.md  relation.md  sequence.md  span.md  token.md
docs/api/parser/: lexer.md  parser.md  tokens.md
docs/guides/: ast-design.md  cheatsheet.md  index.md  llm-workflows.md  misc.md  parallel.md  relations.md  tagset-validation.md  tokens.md
docs/overrides/: main.html
docs/overrides/python/material/: class.html.jinja  function.html.jinja
examples/: 01_basic_parsing.py  02_schema_validation.py  03_llm_agentic_workflow.py  04_advanced_queries.py  basics.py  llm_agentic_workflow.py  serialization.py  validation.py
guides/: index.html
guides/ast-design/: index.html
guides/cheatsheet/: index.html
guides/llm-workflows/: index.html
guides/misc/: index.html
guides/parallel/: index.html
guides/relations/: index.html
guides/tokens/: index.html
overrides/python/material/: function.html.jinja
quickstart/: index.html
scripts/: get_bcql_g4.py
search/: search_index.json
src/bcql_py/: __init__.py  _version.py  exceptions.py  utils.py
src/bcql_py/models/: __init__.py  alignment.py  base.py  capture.py  function.py  functions.py  lookaround.py  relation.py  sequence.py  span.py  token.py  union.py
src/bcql_py/parser/: __init__.py  lexer.py  parser.py  tokens.py
src/bcql_py/validation/: __init__.py  spec.py  validator.py
src/bcql_py/validation/presets/: __init__.py  lassy.py  ud.py
tests/: conftest.py  test_app.py  test_docs_hooks.py  test_exceptions.py  test_lexer.py  test_parser.py  test_parser_alignment.py  test_parser_bool.py  test_parser_capture.py  test_parser_errors.py  test_parser_function.py  test_parser_global_constraint.py  test_parser_group.py  test_parser_lookaround.py  test_parser_position_filter.py  test_parser_relation.py  test_parser_repetition.py  test_parser_sequence.py  test_parser_span.py  test_parser_token.py  test_roundtrip.py  test_utils.py  test_validation.py  test_version.py
tests/parser/: test_lexer.py
