[project]
name = "bcql_py"
dynamic = ["version"]
description = "A Python parser for Blacklab Corpus Query Language"
readme = "README.md"
authors = [
    { name = "Bram Vanroy", email = "2779410+BramVanroy@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
  "Framework :: Pydantic :: 2",
  "Framework :: MkDocs",
  "Framework :: Pytest",
  "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.0,<3",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.6,<10",
    "mike>=2.1.3,<3",
    "mkdocstrings[python]>=1.0.4,<2",
    "mkdocs-autorefs>=1.4.4,<2",
    "mkdocs-gen-files>=0.6.1,<1",
    "mkdocs-minify-plugin>=0.8.0,<1",
]
app = [
    "gradio==6.13.0,<7",
]
dev = [
    {include-group = "docs"},
    {include-group = "app"},
    "interrogate>=1.7.0,<2",
    "mypy>=1.20.1,<2",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10,<1",
    "types-requests>=2.32,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov=bcql_py",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[project.urls]
Homepage = "https://github.com/BramVanroy/bcql_py"
Documentation = "https://bramvanroy.github.io/bcql_py/"
Issues = "https://github.com/BramVanroy/bcql_py/issues"
Repository = "https://github.com/BramVanroy/bcql_py.git"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "scripts", "generate_llms_file.py"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "grammarinator.*"
ignore_missing_imports = true

# Ruff style
[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "E402"]
select = ["C", "E", "F", "W", "I"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["bcql_py"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.interrogate]
style = "google"
exclude = ["tests", "parser", "scratches"]
ignore-private = true
ignore-semiprivate = true
color = true
